2023-05-14  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/5978358e5877b0033584334c5bf6ec7d8cf22ae8 ) and raygui ( https://github.com/raysan5/raygui/commit/aa81c167f10707ea173ea1190eda18e57d841b8f )

2023-04-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/709b14180a6ed0379c134bd86612994cb2f36f80 ) and raygui ( https://github.com/raysan5/raygui/commit/5d7bc6b70adc195ccf3b556a23a1e2103f88ec7a )

2023-03-19  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/2e02474b7aac2e6e3fe680a3aa996973585eeaad ) and raygui ( https://github.com/raysan5/raygui/commit/5d1de95ba2d16c44c4e777873a0e39f75dab8ffd )

2023-03-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator: Now generates binding code for rcamera.h
	* example: Removed SetCameaMode

2023-02-26  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/raylib_generator.py: Emits accessors for struct members
	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/7fd2bf1a32c3ed7c932fe7c020858ecadb3b2056 ) and raygui ( https://github.com/raysan5/raygui/commit/c02a5883e0fa0bf78dbd65e70c530080deac5056 )

2023-02-25  vaiorabbit  <http://twitter.com/vaiorabbit>

	* generator/raylib_generator.py: Emits appropriate spaces to align comments

2023-02-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/generate_heightmap_obj.rb: Added

2023-02-15  vaiorabbit  <http://twitter.com/vaiorabbit>

	* example/models_heightmap.rb: Added

2023-02-04  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/7914332c40ee811ad08a90e4eb7d40c2d1e81f4e ) and raygui ( https://github.com/raysan5/raygui/commit/cec2de3440eac0ad0020d3ce3d546706c0749335 )

2023-01-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Added Linux x86_64 binaries